--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <p>This application is entirely programmed in JavaScript. This was done intentionally, so that all encryption and decryption happens client-side. This means the code runs as a distributed application, relying only on GitHub Pages for infrastructure. It also means that no data about locked links is ever stored on a server. The code is designed to be auditable so users can investigate what is happening behind the scenes.</p>
 
-    <p>If you still want to run the application, I encourage you to clone the <a href="https://github.com/miapipai/link-lock">source code on GitHub</a>. That way you can disable JavaScript only for trusted files on your local machine.</p>
+    <p>If you still want to run the application, I encourage you to clone the <a href="https://github.com/miapipai/miapipai.github.io">source code on GitHub</a>. That way you can disable JavaScript only for trusted files on your local machine.</p>
   </div>
   </noscript>
 
@@ -48,9 +48,9 @@
   <div class="error red-border" style="display: none">
     <p id="errortext">Error</p>
     <button onclick="main()">Try again</button>
-    <a href="https://miapipai.github.io/link-lock"><button>Lock a link</button></a>
-    <a href="https://miapipai.github.io/link-lock/decrypt/" id="no-redirect" target="_blank"><button>Decrypt without redirect</button></a>
-    <a href="https://miapipai.github.io/link-lock/hidden/" id="hidden" target="_blank"><button>Create hidden bookmark</button></a>
+    <a href="https://miapipai.github.io/miapipai.github.io"><button>Lock a link</button></a>
+    <a href="https://miapipai.github.io/miapipai.github.io/decrypt/" id="no-redirect" target="_blank"><button>Decrypt without redirect</button></a>
+    <a href="https://miapipai.github.io/miapipai.github.io/hidden/" id="hidden" target="_blank"><button>Create hidden bookmark</button></a>
   </div>
 </body>
 
