--- a/hidden/index.html
+++ b/hidden/index.html
@@ -53,7 +53,7 @@
   <p>Here is how to create hidden bookmarks:</p>
   <ol>
     <li>
-      <a href="https://miapipai.github.io/link-lock">Add a password to the hidden link</a> if you have not done so already.
+      <a href="https://miapipai.github.io/miapipai.github.io">Add a password to the hidden link</a> if you have not done so already.
     </li>
     <li>
       Drag the "decrypt" bookmark below to your bookmarks bar.
