--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
   </noscript>
 
   <div class="form" style="display: none">
-    <p>Please enter the password to unlock the link.</p>
+    <p>Please enter the password to unlock the link. V 6</p>
     <p id="hint"></p>
 
     <hr />
 
     <label for="password">password</label>
-    <input type="password" id="password" autofocus />
+    <input type="password" id="password" autofocus autocomplete="on"/>
     <button id="unlockbutton">Unlock link</button>
 	<button type="button" onclick="alert(document.referrer)">Previous site</button>
   </div>
