--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
   <title>Link Lock - Password-protect links</title>
 
@@ -34,7 +40,7 @@
   </noscript>
 
   <form action="" class="remember-input" style="display: none">
-    <p>Please enter the password to unlock the link. V 7</p>
+    <p>Please enter the password to unlock the link. V 8</p>
     <p id="hint"></p>
 
     <hr />
