--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </noscript>
 
   <form action="" class="remember-input" style="display: none">
-    <p>Please enter the password to unlock the link. V 9</p>
+    <p>Please enter the password to unlock the link. V 10</p>
     <p id="hint"></p>
 
     <hr />
@@ -47,7 +47,7 @@
     <input type="password" id="password" autofocus autocomplete="on"/>
     <button id="unlockbutton">Unlock link</button>
 	<button type="button" onclick="alert(document.referrer)">Previous site</button>
-  </div>
+  </form>
 
   <!-- Display errors in a big red box -->
   <div class="error red-border" style="display: none">
