--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </div>
   </noscript>
 
-  <form action="" class="remember-input" style="display: none">
-    <p>Please enter the password to unlock the link. V 13</p>
+  <form action="" class="remember-input">
+    <p>Please enter the password to unlock the link. V 14</p>
     <p id="hint"></p>
 
     <hr />
@@ -50,7 +50,7 @@
   </form>
 
   <!-- Display errors in a big red box -->
-  <div class="error red-border" style="display: none">
+  <div class="error red-border">
     <p id="errortext">Error</p>
     <button onclick="main()">Try again</button>
     <a href="https://miapipai.github.io/miapipai.github.io"><button>Lock a link</button></a>
