--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <!-- Metadata -->
   <meta charset="utf-8" />
-  <meta name="author" content="Jacob Strieb" />
-  <meta name="description" content="Password protect links using AES in the browser." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -19,7 +17,7 @@
   <title>Link Lock - Password-protect links</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css" type="text/css" />
+  <!--<link rel="stylesheet" href="style.css" type="text/css" />-->
 
   <!-- Scripts -->
   <script type="text/javascript" src="b64.js"></script>
@@ -33,15 +31,11 @@
   <noscript>
   <div class="red-border">
     <p>If you are seeing this, it means that you have JavaScript disabled. Please enable JavaScript to access the locked link.</p>
-
-    <p>This application is entirely programmed in JavaScript. This was done intentionally, so that all encryption and decryption happens client-side. This means the code runs as a distributed application, relying only on GitHub Pages for infrastructure. It also means that no data about locked links is ever stored on a server. The code is designed to be auditable so users can investigate what is happening behind the scenes.</p>
-
-    <p>If you still want to run the application, I encourage you to clone the <a href="https://github.com/miapipai/miapipai.github.io">source code on GitHub</a>. That way you can disable JavaScript only for trusted files on your local machine.</p>
   </div>
   </noscript>
 
   <form action="" class="remember-input">
-    <p>Please enter the password to unlock the link. V 15</p>
+    <p>Please enter the password to unlock the link. V 16</p>
     <p id="hint"></p>
 
     <hr />
@@ -51,15 +45,6 @@
     <button id="unlockbutton">Unlock link</button>
 	<button type="button" onclick="alert(document.referrer)">Previous site</button>
   </form>
-
-  <!-- Display errors in a big red box -->
-  <div class="error red-border">
-    <p id="errortext">Error</p>
-    <button onclick="main()">Try again</button>
-    <a href="https://miapipai.github.io/miapipai.github.io"><button>Lock a link</button></a>
-    <a href="https://miapipai.github.io/miapipai.github.io/decrypt/" id="no-redirect" target="_blank"><button>Decrypt without redirect</button></a>
-    <a href="https://miapipai.github.io/miapipai.github.io/hidden/" id="hidden" target="_blank"><button>Create hidden bookmark</button></a>
-  </div>
 </body>
 
 <script type="text/javascript" src="remember-input.min.js"></script>
@@ -68,11 +53,6 @@
       handleSubmit: true,
       onSubmit: (e, data, submit) => {
         console.log(data);
-      
-
-        // setTimeout(() => {
-        //   submit();
-        // }, 5000);
       },
       clearOnSubmit: true,
     });
