--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
     <hr />
 
-    <label for="password">password</label>
-    <input type="password" id="password" class="form-control" name="firstpassword" autofocus autocomplete="on"/>
+    <label for="text">password</label>
+    <input type="text" id="text" class="form-control" name="firstpassword" autofocus autocomplete="on"/>
     <button id="unlockbutton">Unlock link</button>
 	<button type="button" onclick="alert(document.referrer)">Previous site</button>
   </form>
