--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <button id="unlockbutton">Unlock link</button>
 	<button type="button" onclick="alert(document.referrer)">Previous site</button>
   </form>
+  
+	<button
+	type="submit"
+	onclick="window.location.reload()"
+	class="btn btn-warning">
 </body>
 
 <script type="text/javascript" src="remember-input.min.js"></script>
