--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Link Lock - Password-protect links</title>
 
   <!-- Styles -->
-  <!--<link rel="stylesheet" href="style.css" type="text/css" />-->
+  <link rel="stylesheet" href="style.css" type="text/css" />
 
   <!-- Scripts -->
   <script type="text/javascript" src="b64.js"></script>
